Cite Knittel and Metaxoglou (2018) #4

--- a/papers/report.tex
+++ b/papers/report.tex
@@ -9,12 +9,17 @@
 \usepackage{here}
 \usepackage{url}
 \usepackage{listings}
+\usepackage{natbib}
 
 \begin{document}
+
 \maketitle
 
 \section{Introduction}
 
-This is a test.
+\citet{knittel2018working} is a good reference for data management issues in empirical research projects.
+
+\bibliography{report}
+\bibliographystyle{aer}
 
 \end{document}
