--- a/papers/report.tex
+++ b/papers/report.tex
@@ -17,7 +17,7 @@
 
 \section{Introduction}
 
-\citet{knittel2018working} is a good reference for data management issues in empirical research projects.
+\citet{knittel2018working} is a good reference for empirical research projects.
 
 \bibliography{report}
 \bibliographystyle{aer}
