Change bib style

--- a/papers/report.tex
+++ b/papers/report.tex
@@ -9,7 +9,7 @@
 \usepackage{here}
 \usepackage{url}
 \usepackage{listings}
-\usepackage[natbib=true, style=apa]{biblatex}
+\usepackage[style=apa]{biblatex}
 \bibliography{report.bib}
 
 \begin{document}
@@ -18,7 +18,7 @@
 
 \section{Introduction}
 
-\citet{knittel2018working} is a good reference for empirical research projects.
+\textcite{knittel2018working} is a good reference for empirical research projects.
 
 \printbibliography
 
