--- a/papers/report.tex
+++ b/papers/report.tex
@@ -9,8 +9,7 @@
 \usepackage{here}
 \usepackage{url}
 \usepackage{listings}
-\usepackage[style=apa]{biblatex}
-\bibliography{report.bib}
+\usepackage{natbib}
 
 \begin{document}
 
@@ -18,8 +17,9 @@
 
 \section{Introduction}
 
-\textcite{knittel2018working} is a good reference for empirical research projects.
+\citet{knittel2018working} is a good reference for data management issues in empirical research projects.
 
-\printbibliography
+\bibliography{report}
+\bibliographystyle{aer}
 
 \end{document}
