Change the title

--- a/papers/report.tex
+++ b/papers/report.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\title{How to write a paper using Git and GitHub}
+\title{How to Write a Paper Using Git and GitHub}
 \author{Shota Komatsu}
 \date{\today}
 
