--- a/papers/report.bib
+++ b/papers/report.bib
@@ -7,3 +7,13 @@
   year={2018},
   publisher={De Gruyter}
 }
+
+@article{athey2019economists,
+  title={Economists (and economics) in tech companies},
+  author={Athey, Susan and Luca, Michael},
+  journal={Journal of Economic Perspectives},
+  volume={33},
+  number={1},
+  pages={209--30},
+  year={2019}
+}
