Edit the beamer

--- a/papers/beamer.tex
+++ b/papers/beamer.tex
@@ -10,7 +10,7 @@
 \frame{\titlepage}
 
 \begin{frame}
-\frametitle{Sample frame title}
+\frametitle{Introduction}
 \citet{knittel2018working} is a good reference for data management issues in empirical research projects.
 \end{frame}
 
