--- a/papers/beamer.tex
+++ b/papers/beamer.tex
@@ -11,7 +11,7 @@
 
 \begin{frame}
 \frametitle{Introduction}
-\citet{knittel2018working} is a good reference for data management issues in empirical research projects. Test.
+\citet{knittel2018working} is a good reference for data management issues in empirical research projects.
 \end{frame}
 
 \begin{frame}
